- Recoded some of +G to work MUCH faster. A compiled copy of the regex is now stored 
  in memory rather than compiling the regex each time the swear stripping was trigged. 
  This uses slightly more memory, but saves a signifigant amount of execution time.
  Idea inspired by a suggestion from CaliMonk
- Fixed a bug where makeconf was still included in make install 
- Fixed a bug reported by |Zerwas| where tsctl required all lowercase params (#0000537)
- Fixed a bug reported by |Zerwas| where forgetting to have an oper::flags would cause a 
  crash (#0000543)
- Added a max of 500:500 to +f (higher than this is just stupid), this fixes
  (#0000542) reported by BiGi
- Fixed a bug where included files were not added to the file list in the Config menu under
  win32. Reported by PoisonDart316 (#0000535)
- Added chmode +u to help.conf, reported by Jaw959 (#0000544)
- Fixed a docs typo 'channes' instead of 'channels' and a typo that said +I is limited to
  netadmins, reported by PoisonDart316 (#0000547), also removed /unkline and /unzline from
  the docs (replaced with /kline - and /zline -, also reported by PoisonDart316 (#0000548)
- Fixed bug with INET6 and find_tkline_zap (..)
- Fixed include bug
- Created StripControlCodes() and call it from stripbadwords() to fix bug 552
- Made 3 param TKL funcs Perm with reason instead of timed with no reason
- Added set::snomask-on-oper to set the default snomask when users /oper (oper::snomask
  overrides this)
- Fixed a bug reported by AngryWolf where setting umode -o didn't remove umode
  h. (#0000556)
- Added a pretty_time_val function, this converts a number such as 86400 to "1 day"
  to make it easier to read.
- Fixed a bug in the binary search functions that could cause crashes when unknown config
  directives were added. Reported by 1of10 (#0000587)
- Fixed a bug at synch time that could cause more parameters to be sent than should be
- Fixed a TKL bug where leaving out the reason caused a crash (reported by Ravage)